--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,4 +6,10 @@
       <directory suffix="Test.php">./tests/ActiveDoctrine/</directory>
     </testsuite>
   </testsuites>
+
+  <filter>
+    <whitelist>
+      <directory>./src</directory>
+    </whitelist>
+  </filter>
 </phpunit>
