--- a/tests/ActiveDoctrine/Tests/Selector/sql.yml
+++ b/tests/ActiveDoctrine/Tests/Selector/sql.yml
@@ -40,3 +40,23 @@ testMixed1:
     mysql: "SELECT * FROM `table` WHERE `id` < ? AND `id` > ? ORDER BY `name` DESC, `id` ASC LIMIT 20"
 
 params_testMixed1: [200, 100]
+
+testWhereIn:
+    mysql: "SELECT * FROM `table` WHERE `id` IN (?, ?, ?, ?, ?, ?)"
+
+params_testWhereIn: [1, 2, 3, 4, 5, 20]
+
+testWhereInAndWhereIn:
+    mysql: "SELECT * FROM `table` WHERE `id` IN (?, ?, ?) AND `name` IN (?, ?, ?)"
+
+params_testWhereInAndWhereIn: [1, 2, 3, 'foo', 'bar', 'baz']
+
+testWhereInOrWhereIn:
+    mysql: "SELECT * FROM `table` WHERE `id` IN (?, ?, ?) OR `name` IN (?, ?, ?)"
+
+params_testWhereInOrWhereIn: [1, 2, 3, 'foo', 'bar', 'baz']
+
+testWhereAndWhereIn:
+    mysql: "SELECT * FROM `table` WHERE `name` = ? AND `id` IN (?, ?, ?)"
+
+params_testWhereAndWhereIn: ['bar', 1, 2, 3]
