Removing tests from composer autoload.

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "ActiveDoctrine\\": "src/ActiveDoctrine",
-            "ActiveDoctrine\\Tests\\": "tests/ActiveDoctrine/Tests"
+            "ActiveDoctrine\\": "src/ActiveDoctrine"
         }
     }
 }
