--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A minimal active record implementation on top of the Doctrine DBAL.",
     "require": {
         "php": ">=5.4.0",
-        "doctrine/dbal": "2.*"
+        "doctrine/dbal": "~2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
