--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "doctrine/dbal": "~2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "4.*",
+        "symfony/yaml" : "~2.3"
     },
     "license": "MIT",
     "authors": [
